// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ChannelHeaderDropdown/MenuItem.ViewAndManageMembers should match snapshot 1`] = `
<li
  role="presentation"
>
  <Connect(ModalToggleButtonRedux)
    dialogProps={
      Object {
        "channel": Object {
          "type": "O",
        },
      }
    }
    dialogType={[Function]}
    modalId="channel_members"
    role="menuitem"
  >
    <Connect(ChannelPermissionGate)
      permissions={
        Array [
          "manage_public_channel_members",
        ]
      }
    >
      <FormattedMessage
        defaultMessage="Manage Members"
        id="channel_header.manageMembers"
        values={Object {}}
      />
    </Connect(ChannelPermissionGate)>
    <Connect(ChannelPermissionGate)
      invert={true}
      permissions={
        Array [
          "manage_public_channel_members",
        ]
      }
    >
      <FormattedMessage
        defaultMessage="View Members"
        id="channel_header.viewMembers"
        values={Object {}}
      />
    </Connect(ChannelPermissionGate)>
  </Connect(ModalToggleButtonRedux)>
</li>
`;

exports[`components/ChannelHeaderDropdown/MenuItem.ViewAndManageMembers should match snapshot when the channel is town square 1`] = `
<li
  role="presentation"
>
  <Connect(ModalToggleButtonRedux)
    dialogProps={
      Object {
        "channel": Object {
          "type": "O",
        },
      }
    }
    dialogType={[Function]}
    modalId="channel_members"
    role="menuitem"
  >
    <Connect(ChannelPermissionGate)
      invert={false}
      permissions={
        Array [
          "manage_public_channel_members",
        ]
      }
    >
      <FormattedMessage
        defaultMessage="View Members"
        id="channel_header.viewMembers"
        values={Object {}}
      />
    </Connect(ChannelPermissionGate)>
  </Connect(ModalToggleButtonRedux)>
</li>
`;
